--- a/css/style.css
+++ b/css/style.css
@@ -11,4 +11,17 @@
 html {
   font-size: 62.5%;
 }
+
+.banner {
+  background-image: url("../images/pattern-bg.png");
+  background-size: cover;
+  background-position: center;
+  height: 30rem;
+}
+
+@media (min-width: 768px) {
+  .banner {
+    height: 28rem;
+  }
+}
 /*# sourceMappingURL=style.css.map */
