Styled the title for mobile and tablet/desktop screens.

--- a/css/style.css
+++ b/css/style.css
@@ -12,6 +12,11 @@ html {
   font-size: 62.5%;
 }
 
+body {
+  font-family: 'Rubik', sans-serif;
+  text-align: center;
+}
+
 .banner {
   background-image: url("../images/pattern-bg.png");
   background-size: cover;
@@ -22,6 +27,24 @@ html {
 @media (min-width: 768px) {
   .banner {
     height: 28rem;
+  }
+}
+
+.banner .title {
+  color: white;
+  font-size: 2.6rem;
+  font-weight: 500;
+  line-height: 3rem;
+  letter-spacing: -0.023rem;
+  padding-top: 2.6rem;
+  padding-bottom: 2.9rem;
+}
+
+@media (min-width: 768px) {
+  .banner .title {
+    font-size: 3.2rem;
+    padding-top: 3.3rem;
+    padding-bottom: 3.1rem;
   }
 }
 /*# sourceMappingURL=style.css.map */
