--- a/css/style.scss
+++ b/css/style.scss
@@ -15,6 +15,11 @@ html {
     font-size: 62.5%;
 }
 
+body {
+    font-family: 'Rubik', sans-serif;
+    text-align: center;
+}
+
 .banner {
     background-image: url('../images/pattern-bg.png');
     background-size: cover;
@@ -22,5 +27,20 @@ html {
     height: 30rem;
     @media(min-width: 768px) {
         height: 28rem;
+    }
+
+    .title {
+        color: hsl(0, 0%, 100%);
+        font-size: 2.6rem;
+        font-weight: 500;
+        line-height: 3rem;
+        letter-spacing: -0.023rem;
+        padding-top: 2.6rem;
+        padding-bottom: 2.9rem;
+        @media(min-width: 768px) {
+            font-size: 3.2rem;
+            padding-top: 3.3rem;
+            padding-bottom: 3.1rem;
+        }
     }
 }
