--- a/css/style.css
+++ b/css/style.css
@@ -47,4 +47,64 @@ body {
     padding-bottom: 3.1rem;
   }
 }
+
+.banner .ip-form {
+  width: 87.2%;
+  max-width: 55.5rem;
+  margin: 0 auto;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  padding-bottom: 2.4rem;
+}
+
+@media (min-width: 768px) {
+  .banner .ip-form {
+    padding-bottom: 4.8rem;
+  }
+}
+
+.banner .ip-form .ip-input {
+  font-size: 1.8rem;
+  font-family: inherit;
+  border: none;
+  height: 5.8rem;
+  -webkit-box-flex: 1;
+      -ms-flex-positive: 1;
+          flex-grow: 1;
+  border-radius: 1.5rem 0 0 1.5rem;
+  padding: 0 2.4rem;
+}
+
+.banner .ip-form .ip-input:focus {
+  outline: none;
+}
+
+.banner .ip-form .search-btn {
+  cursor: pointer;
+  border: none;
+  width: 5.8rem;
+  height: 5.8rem;
+  background: black;
+  border-radius: 0 1.5rem 1.5rem 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-transition: background-color 0.3s, border 0.3s;
+  transition: background-color 0.3s, border 0.3s;
+}
+
+.banner .ip-form .search-btn:hover, .banner .ip-form .search-btn:focus {
+  background-color: #404040;
+}
+
+.banner .ip-form .search-btn:focus {
+  outline: none;
+}
 /*# sourceMappingURL=style.css.map */
