--- a/css/style.scss
+++ b/css/style.scss
@@ -43,4 +43,49 @@ body {
             padding-bottom: 3.1rem;
         }
     }
+
+    .ip-form {
+        width: 87.2%;
+        max-width: 55.5rem;
+        margin: 0 auto;
+        display: flex;
+        padding-bottom: 2.4rem;
+        @media(min-width: 768px) {
+            padding-bottom: 4.8rem;
+        }
+        
+        .ip-input {
+            font-size: 1.8rem;
+            font-family: inherit;
+            border: none;
+            height: 5.8rem;
+            flex-grow: 1;
+            border-radius: 1.5rem 0 0 1.5rem;
+            padding: 0 2.4rem;
+            &:focus {
+                outline: none;
+            }
+        }
+
+        .search-btn {
+            cursor: pointer;
+            border: none;
+            width: 5.8rem;
+            height: 5.8rem;
+            background: hsl(0, 0%, 0%);
+            border-radius: 0 1.5rem 1.5rem 0;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            transition: background-color 0.3s, border 0.3s;
+            &:hover,
+            &:focus {
+                background-color: hsl(0, 0%, 25%); 
+            }
+
+            &:focus {
+                outline: none;
+            }
+        }
+    }
 }
