--- a/css/style.css
+++ b/css/style.css
@@ -117,6 +117,19 @@ body {
   border-radius: 1.5rem;
 }
 
+@media (min-width: 768px) {
+  .banner .ip-info {
+    padding-top: 3.7rem;
+    display: -ms-grid;
+    display: grid;
+    -ms-grid-columns: (1fr)[4];
+        grid-template-columns: repeat(4, 1fr);
+  }
+  .banner .ip-info .wrapper {
+    margin: 0 3.2rem;
+  }
+}
+
 .banner .ip-info .info-title {
   text-transform: uppercase;
   font-weight: 700;
@@ -127,6 +140,22 @@ body {
   color: #969696;
 }
 
+@media (min-width: 768px) {
+  .banner .ip-info .info-title {
+    text-align: start;
+  }
+}
+
+@media (min-width: 900px) {
+  .banner .ip-info .info-title {
+    text-align: start;
+    font-size: 1.2rem;
+    line-height: 1.422rem;
+    letter-spacing: 0.175rem;
+    padding-bottom: 1.3rem;
+  }
+}
+
 .banner .ip-info .info-text {
   font-weight: 500;
   font-size: 2rem;
@@ -134,5 +163,21 @@ body {
   letter-spacing: -0.018rem;
   padding-bottom: 2.5rem;
   color: #2b2b2b;
+}
+
+@media (min-width: 768px) {
+  .banner .ip-info .info-text {
+    text-align: start;
+  }
+}
+
+@media (min-width: 900px) {
+  .banner .ip-info .info-text {
+    text-align: start;
+    font-size: 2.6rem;
+    line-height: 3rem;
+    letter-spacing: -0.023rem;
+    padding-bottom: 3.7rem;
+  }
 }
 /*# sourceMappingURL=style.css.map */
