--- a/css/style.css
+++ b/css/style.css
@@ -127,6 +127,18 @@ body {
   }
   .banner .ip-info .wrapper {
     margin: 0 3.2rem;
+    position: relative;
+  }
+  .banner .ip-info .wrapper:nth-of-type(2)::before,
+  .banner .ip-info .wrapper:nth-of-type(3)::before,
+  .banner .ip-info .wrapper:nth-of-type(4)::before {
+    content: '';
+    width: 0.1rem;
+    height: 7.5rem;
+    position: absolute;
+    left: -3.2rem;
+    top: 0.5rem;
+    background: rgba(0, 0, 0, 0.15);
   }
 }
 
