Created a function that takes the latitude and longitude from the geolocation api and uses leaflet to display a marker of the location on a map.

--- a/css/style.css
+++ b/css/style.css
@@ -192,4 +192,14 @@ body {
     padding-bottom: 3.7rem;
   }
 }
+
+#map {
+  height: 52.8rem;
+}
+
+@media (min-width: 768px) {
+  #map {
+    height: 52rem;
+  }
+}
 /*# sourceMappingURL=style.css.map */
