--- a/css/style.css
+++ b/css/style.css
@@ -22,6 +22,7 @@ body {
   background-size: cover;
   background-position: center;
   height: 30rem;
+  position: relative;
 }
 
 @media (min-width: 768px) {
@@ -115,6 +116,11 @@ body {
   margin: 0 auto;
   padding-top: 2.6rem;
   border-radius: 1.5rem;
+  position: absolute;
+  z-index: 1000;
+  left: 50%;
+  -webkit-transform: translateX(-50%);
+          transform: translateX(-50%);
 }
 
 @media (min-width: 768px) {
