--- a/css/style.scss
+++ b/css/style.scss
@@ -18,6 +18,7 @@ html {
 body {
     font-family: 'Rubik', sans-serif;
     text-align: center;
+    height: 100vh;
 }
 
 .banner {
@@ -167,8 +168,9 @@ body {
 }
 
 #map {
-    height: 52.8rem;
+    height: calc(100% - 30rem);
+    min-height: 50rem;
     @media(min-width: 768px) {
-        height: 52rem;
+        height: calc(100% - 28rem);
     }
 }
