--- a/css/style.css
+++ b/css/style.css
@@ -57,12 +57,13 @@ body {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  padding-bottom: 2.4rem;
+  margin-bottom: 2.4rem;
+  position: relative;
 }
 
 @media (min-width: 768px) {
   .banner .ip-form {
-    padding-bottom: 4.8rem;
+    margin-bottom: 4.8rem;
   }
 }
 
@@ -108,6 +109,19 @@ body {
 
 .banner .ip-form .search-btn:focus {
   outline: none;
+}
+
+.banner .ip-form .error {
+  -webkit-transform: scale(1.5);
+          transform: scale(1.5);
+  position: absolute;
+  left: -1rem;
+  top: -1rem;
+  display: none;
+}
+
+.banner .ip-form .display {
+  display: block;
 }
 
 .banner .ip-info {
