--- a/css/style.scss
+++ b/css/style.scss
@@ -51,9 +51,10 @@ body {
         max-width: 55.5rem;
         margin: 0 auto;
         display: flex;
-        padding-bottom: 2.4rem;
+        margin-bottom: 2.4rem;
+        position: relative;
         @media(min-width: 768px) {
-            padding-bottom: 4.8rem;
+            margin-bottom: 4.8rem;
         }
         
         .ip-input {
@@ -88,6 +89,18 @@ body {
             &:focus {
                 outline: none;
             }
+        }
+
+        .error {
+            transform: scale(1.5);
+            position: absolute;
+            left: -1rem;
+            top: -1rem;
+            display: none;
+        }
+
+        .display {
+            display: block;
         }
     }
 
